--- a/css/styles.css
+++ b/css/styles.css
@@ -308,3 +308,9 @@ textarea.form-control:focus {
     font-size: 0.85rem;
   }
 }
+
+@media (max-width: 576px) {
+  .contacto-btn .texto-contacto {
+    display: none;
+  }
+}
